bar style fixed  - do not wrap text in bar

--- a/src/SvarnyJunak.CeskeObce.Web/wwwroot/css/site.css
+++ b/src/SvarnyJunak.CeskeObce.Web/wwwroot/css/site.css
@@ -153,6 +153,7 @@ input[type="text"] {
   background-color: steelblue;
   text-align: right;
   padding: 3px;
+  white-space: nowrap;
   color: white;
   display: inline-block;
   width: 0;
